@@ -17,10 +17,6 @@ import java.util.Map;
 import org.hibernate.AnnotationException;
 import org.hibernate.annotations.Instantiator;
 import org.hibernate.annotations.TypeBinderType;
-import org.hibernate.annotations.common.reflection.XAnnotatedElement;
-import org.hibernate.annotations.common.reflection.XClass;
-import org.hibernate.annotations.common.reflection.XMethod;
-import org.hibernate.annotations.common.reflection.XProperty;
 import org.hibernate.binder.TypeBinder;
 import org.hibernate.boot.spi.AccessType;
 import org.hibernate.boot.spi.MetadataBuildingContext;
@@ -31,6 +27,12 @@ import org.hibernate.mapping.Property;
 import org.hibernate.mapping.SimpleValue;
 import org.hibernate.mapping.SingleTableSubclass;
 import org.hibernate.metamodel.spi.EmbeddableInstantiator;
+import org.hibernate.models.spi.AnnotationUsage;
+import org.hibernate.models.spi.ClassDetails;
+import org.hibernate.models.spi.FieldDetails;
+import org.hibernate.models.spi.MemberDetails;
+import org.hibernate.models.spi.MethodDetails;
+import org.hibernate.models.spi.TypeDetails;
 import org.hibernate.property.access.internal.PropertyAccessStrategyCompositeUserTypeImpl;
 import org.hibernate.property.access.internal.PropertyAccessStrategyMixedImpl;
 import org.hibernate.property.access.spi.PropertyAccessStrategy;
@@ -59,7 +61,6 @@ import static org.hibernate.boot.model.internal.BinderHelper.isGlobalGeneratorNa
 import static org.hibernate.boot.model.internal.GeneratorBinder.buildGenerators;
 import static org.hibernate.boot.model.internal.GeneratorBinder.generatorType;
 import static org.hibernate.boot.model.internal.GeneratorBinder.makeIdGenerator;
-import static org.hibernate.boot.model.internal.HCANNHelper.findContainingAnnotations;
 import static org.hibernate.boot.model.internal.PropertyBinder.addElementsOfClass;
 import static org.hibernate.boot.model.internal.PropertyBinder.processElementAnnotations;
 import static org.hibernate.boot.model.internal.PropertyHolderBuilder.buildPropertyHolder;
@@ -80,10 +81,10 @@ public class EmbeddableBinder {
 			boolean isIdentifierMapper,
 			boolean isComponentEmbedded,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
-			XProperty property,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
+			MemberDetails property,
 			AnnotatedColumns columns,
-			XClass returnedClass,
+			ClassDetails returnedClass,
 			PropertyBinder propertyBinder,
 			boolean isOverridden,
 			Class<? extends CompositeUserType<?>> compositeUserType) {
@@ -145,10 +146,19 @@ public class EmbeddableBinder {
 		);
 	}
 
-	static boolean isEmbedded(XProperty property, XClass returnedClass) {
-		return property.isAnnotationPresent( Embedded.class )
-			|| property.isAnnotationPresent( EmbeddedId.class )
-			|| returnedClass.isAnnotationPresent( Embeddable.class ) && !property.isAnnotationPresent( Convert.class );
+	static boolean isEmbedded(MemberDetails property, ClassDetails returnedClass) {
+		return property.hasAnnotationUsage( Embedded.class )
+			|| property.hasAnnotationUsage( EmbeddedId.class )
+			|| returnedClass.hasAnnotationUsage( Embeddable.class ) && !property.hasAnnotationUsage( Convert.class );
+	}
+
+	static boolean isEmbedded(MemberDetails property, TypeDetails returnedClass) {
+		if ( property.hasAnnotationUsage( Embedded.class ) || property.hasAnnotationUsage( EmbeddedId.class ) ) {
+			return true;
+		}
+
+		final ClassDetails returnClassDetails = returnedClass.determineRawClass();
+		return returnClassDetails.hasAnnotationUsage( Embeddable.class ) && !property.hasAnnotationUsage( Convert.class );
 	}
 
 	private static Component bindEmbeddable(
@@ -160,7 +170,7 @@ public class EmbeddableBinder {
 			MetadataBuildingContext context,
 			boolean isComponentEmbedded,
 			boolean isId, //is an identifier
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
 			String referencedEntityName, //is a component who is overridden by a @MapsId
 			String propertyName,
 			Class<? extends EmbeddableInstantiator> customInstantiatorImpl,
@@ -206,19 +216,22 @@ public class EmbeddableBinder {
 			component.setKey( true );
 			checkEmbeddedId( inferredData, propertyHolder, referencedEntityName, component );
 		}
-		callTypeBinders( component, context, inferredData.getPropertyClass() );
+		callTypeBinders( component, context, inferredData.getPropertyType() );
 		return component;
 	}
 
-	private static void callTypeBinders(Component component, MetadataBuildingContext context, XClass annotatedClass ) {
-		for ( Annotation containingAnnotation : findContainingAnnotations( annotatedClass, TypeBinderType.class) ) {
-			final TypeBinderType binderType = containingAnnotation.annotationType().getAnnotation( TypeBinderType.class );
+	private static void callTypeBinders(Component component, MetadataBuildingContext context, TypeDetails annotatedClass ) {
+		final List<AnnotationUsage<?>> metaAnnotatedAnnotations = annotatedClass.determineRawClass().getMetaAnnotated( TypeBinderType.class );
+		for ( AnnotationUsage<?> metaAnnotated : metaAnnotatedAnnotations ) {
+			final AnnotationUsage<TypeBinderType> binderType = metaAnnotated.getAnnotationDescriptor().getAnnotationUsage( TypeBinderType.class );
 			try {
-				final TypeBinder binder = binderType.binder().newInstance();
-				binder.bind( containingAnnotation, context, component );
+				final ClassDetails binderImpl = binderType.getClassDetails( "binder" );
+				final Class<? extends TypeBinder<Annotation>> binderJavaType = binderImpl.toJavaClass();
+				final TypeBinder<Annotation> binder = binderJavaType.getDeclaredConstructor().newInstance();
+				binder.bind( metaAnnotated.toAnnotation(), context, component );
 			}
 			catch ( Exception e ) {
-				throw new AnnotationException( "error processing @TypeBinderType annotation '" + containingAnnotation + "'", e );
+				throw new AnnotationException( "error processing @TypeBinderType annotation '" + metaAnnotated + "'", e );
 			}
 		}
 	}
@@ -230,13 +243,13 @@ public class EmbeddableBinder {
 			MetadataBuildingContext context,
 			boolean isComponentEmbedded,
 			boolean isId,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
 			Component component) {
 		final PropertyBinder binder = new PropertyBinder();
 		binder.setDeclaringClass( inferredData.getDeclaringClass() );
 		binder.setName( inferredData.getPropertyName() );
 		binder.setValue(component);
-		binder.setProperty( inferredData.getProperty() );
+		binder.setMemberDetails( inferredData.getAttributeMember() );
 		binder.setAccessType( inferredData.getDefaultAccess() );
 		binder.setEmbedded(isComponentEmbedded);
 		binder.setHolder(propertyHolder);
@@ -284,7 +297,7 @@ public class EmbeddableBinder {
 			Class<? extends CompositeUserType<?>> compositeUserTypeClass,
 			AnnotatedColumns columns,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass) {
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass) {
 		return fillEmbeddable(
 				propertyHolder,
 				inferredData,
@@ -318,7 +331,7 @@ public class EmbeddableBinder {
 			Class<? extends CompositeUserType<?>> compositeUserTypeClass,
 			AnnotatedColumns columns,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
 			boolean isIdClass) {
 		// inSecondPass can only be used to apply right away the second pass of a composite-element
 		// Because it's a value type, there is no bidirectional association, hence second pass
@@ -344,29 +357,33 @@ public class EmbeddableBinder {
 
 		// propertyHolder here is the owner of the component property.
 		// Tell it we are about to start the component...
-		propertyHolder.startingProperty( inferredData.getProperty() );
+		propertyHolder.startingProperty( inferredData.getAttributeMember() );
 
 		final CompositeUserType<?> compositeUserType;
-		final XClass returnedClassOrElement;
+		final ClassDetails returnedClassOrElement;
 		if ( compositeUserTypeClass == null ) {
 			compositeUserType = null;
-			returnedClassOrElement = inferredData.getClassOrElement();
+			returnedClassOrElement = inferredData.getClassOrElementType().determineRawClass();
 		}
 		else {
 			compositeUserType = compositeUserType( compositeUserTypeClass, context );
 			component.setTypeName( compositeUserTypeClass.getName() );
-			returnedClassOrElement = context.getBootstrapContext().getReflectionManager()
-					.toXClass( compositeUserType.embeddable() );
+			returnedClassOrElement = context.getMetadataCollector().getSourceModelBuildingContext().getClassDetailsRegistry().resolveClassDetails( compositeUserType.embeddable().getName() );
 		}
 
-		final XClass annotatedClass = inferredData.getPropertyClass();
-		final List<PropertyData> classElements =
-				collectClassElements( propertyAccessor, context, returnedClassOrElement, annotatedClass, isIdClass );
+		final TypeDetails annotatedType = inferredData.getPropertyType();
+		final List<PropertyData> classElements = collectClassElements(
+				propertyAccessor,
+				context,
+				returnedClassOrElement,
+				annotatedType,
+				isIdClass
+		);
 		final List<PropertyData> baseClassElements =
-				collectBaseClassElements( baseInferredData, propertyAccessor, context, annotatedClass );
+				collectBaseClassElements( baseInferredData, propertyAccessor, context, annotatedType );
 		if ( baseClassElements != null
 				//useful to avoid breaking pre JPA 2 mappings
-				&& !hasAnnotationsOnIdClass( annotatedClass ) ) {
+				&& !hasAnnotationsOnIdClass( annotatedType ) ) {
 			processIdClassElements( propertyHolder, baseInferredData, classElements, baseClassElements );
 		}
 		for ( PropertyData propertyAnnotatedElement : classElements ) {
@@ -386,8 +403,8 @@ public class EmbeddableBinder {
 					inheritanceStatePerClass
 			);
 
-			final XProperty property = propertyAnnotatedElement.getProperty();
-			if ( property.isAnnotationPresent( GeneratedValue.class ) ) {
+			final MemberDetails property = propertyAnnotatedElement.getAttributeMember();
+			if ( property.hasAnnotationUsage( GeneratedValue.class ) ) {
 				if ( isIdClass || subholder.isOrWithinEmbeddedId() ) {
 					processGeneratedId( context, component, property );
 				}
@@ -431,8 +448,8 @@ public class EmbeddableBinder {
 	private static List<PropertyData> collectClassElements(
 			AccessType propertyAccessor,
 			MetadataBuildingContext context,
-			XClass returnedClassOrElement,
-			XClass annotatedClass,
+			ClassDetails returnedClassOrElement,
+			TypeDetails annotatedClass,
 			boolean isIdClass) {
 		final List<PropertyData> classElements = new ArrayList<>();
 		//embeddable elements can have type defs
@@ -440,23 +457,23 @@ public class EmbeddableBinder {
 				new PropertyContainer( returnedClassOrElement, annotatedClass, propertyAccessor );
 		addElementsOfClass( classElements, container, context);
 		//add elements of the embeddable's mapped superclasses
-		XClass superClass = annotatedClass.getSuperclass();
+		ClassDetails superClass = annotatedClass.determineRawClass().getSuperClass();
 		while ( isValidSuperclass( superClass, isIdClass ) ) {
 			//FIXME: proper support of type variables incl var resolved at upper levels
 			final PropertyContainer superContainer =
-					new PropertyContainer( superClass, annotatedClass, propertyAccessor );
+					new PropertyContainer( superClass, annotatedClass.determineRawClass(), propertyAccessor );
 			addElementsOfClass( classElements, superContainer, context );
-			superClass = superClass.getSuperclass();
+			superClass = superClass.getSuperClass();
 		}
 		return classElements;
 	}
 
-	private static boolean isValidSuperclass(XClass superClass, boolean isIdClass) {
+	private static boolean isValidSuperclass(ClassDetails superClass, boolean isIdClass) {
 		if ( superClass == null ) {
 			return false;
 		}
 
-		return superClass.isAnnotationPresent( MappedSuperclass.class )
+		return superClass.hasAnnotationUsage( MappedSuperclass.class )
 				|| ( isIdClass
 				&& !superClass.getName().equals( Object.class.getName() )
 				&& !superClass.getName().equals( "java.lang.Record" ) );
@@ -466,17 +483,20 @@ public class EmbeddableBinder {
 			PropertyData baseInferredData,
 			AccessType propertyAccessor,
 			MetadataBuildingContext context,
-			XClass annotatedClass) {
+			TypeDetails annotatedClass) {
 		if ( baseInferredData != null ) {
 			final List<PropertyData> baseClassElements = new ArrayList<>();
 			// iterate from base returned class up hierarchy to handle cases where the @Id attributes
 			// might be spread across the subclasses and super classes.
-			XClass baseReturnedClassOrElement = baseInferredData.getClassOrElement();
+			TypeDetails baseReturnedClassOrElement = baseInferredData.getClassOrElementType();
 			while ( !Object.class.getName().equals( baseReturnedClassOrElement.getName() ) ) {
-				final PropertyContainer container =
-						new PropertyContainer( baseReturnedClassOrElement, annotatedClass, propertyAccessor );
+				final PropertyContainer container = new PropertyContainer(
+						baseReturnedClassOrElement,
+						annotatedClass,
+						propertyAccessor
+				);
 				addElementsOfClass( baseClassElements, container, context );
-				baseReturnedClassOrElement = baseReturnedClassOrElement.getSuperclass();
+				baseReturnedClassOrElement = baseReturnedClassOrElement.determineRawClass().getGenericSuperType();
 			}
 			return baseClassElements;
 		}
@@ -507,13 +527,16 @@ public class EmbeddableBinder {
 		}
 	}
 
-	private static boolean hasAnnotationsOnIdClass(XClass idClass) {
-		for ( XProperty property : idClass.getDeclaredProperties( XClass.ACCESS_FIELD ) ) {
-			if ( hasTriggeringAnnotation( property ) ) {
+	private static boolean hasAnnotationsOnIdClass(TypeDetails idClassType) {
+		return hasAnnotationsOnIdClass( idClassType.determineRawClass() );
+	}
+	private static boolean hasAnnotationsOnIdClass(ClassDetails idClass) {
+		for ( FieldDetails field : idClass.getFields() ) {
+			if ( hasTriggeringAnnotation( field ) ) {
 				return true;
 			}
 		}
-		for ( XMethod method : idClass.getDeclaredMethods() ) {
+		for ( MethodDetails method : idClass.getMethods() ) {
 			if ( hasTriggeringAnnotation( method ) ) {
 				return true;
 			}
@@ -521,22 +544,22 @@ public class EmbeddableBinder {
 		return false;
 	}
 
-	private static boolean hasTriggeringAnnotation(XAnnotatedElement property) {
-		return property.isAnnotationPresent(Column.class)
-			|| property.isAnnotationPresent(OneToMany.class)
-			|| property.isAnnotationPresent(ManyToOne.class)
-			|| property.isAnnotationPresent(Id.class)
-			|| property.isAnnotationPresent(GeneratedValue.class)
-			|| property.isAnnotationPresent(OneToOne.class)
-			|| property.isAnnotationPresent(ManyToMany.class);
+	private static boolean hasTriggeringAnnotation(MemberDetails property) {
+		return property.hasAnnotationUsage(Column.class)
+			|| property.hasAnnotationUsage(OneToMany.class)
+			|| property.hasAnnotationUsage(ManyToOne.class)
+			|| property.hasAnnotationUsage(Id.class)
+			|| property.hasAnnotationUsage(GeneratedValue.class)
+			|| property.hasAnnotationUsage(OneToOne.class)
+			|| property.hasAnnotationUsage(ManyToMany.class);
 	}
 
-	private static void processGeneratedId(MetadataBuildingContext context, Component component, XProperty property) {
-		final GeneratedValue generatedValue = property.getAnnotation( GeneratedValue.class );
+	private static void processGeneratedId(MetadataBuildingContext context, Component component, MemberDetails property) {
+		final AnnotationUsage<GeneratedValue> generatedValue = property.getAnnotationUsage( GeneratedValue.class );
 		final String generatorType = generatedValue != null
-				? generatorType( generatedValue, property.getType(), context )
+				? generatorType( generatedValue, property.getType().determineRawClass(), context )
 				: DEFAULT_ID_GEN_STRATEGY;
-		final String generator = generatedValue != null ? generatedValue.generator() : "";
+		final String generator = generatedValue != null ? generatedValue.getString( "generator" ) : "";
 
 		if ( isGlobalGeneratorNameGlobal( context ) ) {
 			buildGenerators( property, context );
@@ -584,12 +607,12 @@ public class EmbeddableBinder {
 					throw new AnnotationException(
 							"Property '" + getPath(propertyHolder, idClassPropertyData )
 									+ "' belongs to an '@IdClass' but has no matching property in entity class '"
-									+ baseInferredData.getPropertyClass().getName()
+									+ baseInferredData.getPropertyType().getName()
 									+ "' (every property of the '@IdClass' must have a corresponding persistent property in the '@Entity' class)"
 					);
 				}
-				if ( hasToOneAnnotation( entityPropertyData.getProperty() )
-						&& !entityPropertyData.getClassOrElement().equals( idClassPropertyData.getClassOrElement() ) ) {
+				if ( hasToOneAnnotation( entityPropertyData.getAttributeMember() )
+						&& !entityPropertyData.getClassOrElementType().equals( idClassPropertyData.getClassOrElementType() ) ) {
 					//don't replace here as we need to use the actual original return type
 					//the annotation overriding will be dealt with by a mechanism similar to @MapsId
 					continue;
@@ -619,18 +642,20 @@ public class EmbeddableBinder {
 			component.setComponentClassName( inferredData.getClassOrElementName() );
 		}
 		component.setCustomInstantiator( customInstantiatorImpl );
-		final Constructor<?> constructor = resolveInstantiator( inferredData.getClassOrElement(), context );
+		final Constructor<?> constructor = resolveInstantiator( inferredData.getClassOrElementType(), context );
 		if ( constructor != null ) {
 			component.setInstantiator( constructor, constructor.getAnnotation( Instantiator.class ).value() );
 		}
 		return component;
 	}
 
-	private static Constructor<?> resolveInstantiator(XClass embeddableClass, MetadataBuildingContext buildingContext) {
+	private static Constructor<?> resolveInstantiator(TypeDetails embeddableClass, MetadataBuildingContext buildingContext) {
+		return embeddableClass == null ? null : resolveInstantiator( embeddableClass.determineRawClass(), buildingContext );
+	}
+
+	private static Constructor<?> resolveInstantiator(ClassDetails embeddableClass, MetadataBuildingContext buildingContext) {
 		if ( embeddableClass != null ) {
-			final Constructor<?>[] declaredConstructors = buildingContext.getBootstrapContext().getReflectionManager()
-					.toClass( embeddableClass )
-					.getDeclaredConstructors();
+			final Constructor<?>[] declaredConstructors = embeddableClass.toJavaClass().getDeclaredConstructors();
 			Constructor<?> constructor = null;
 			for ( Constructor<?> declaredConstructor : declaredConstructors ) {
 				if ( declaredConstructor.isAnnotationPresent( Instantiator.class ) ) {
@@ -647,29 +672,28 @@ public class EmbeddableBinder {
 	}
 
 	private static Class<? extends EmbeddableInstantiator> determineCustomInstantiator(
-			XProperty property,
-			XClass returnedClass,
+			MemberDetails property,
+			ClassDetails returnedClass,
 			MetadataBuildingContext context) {
-		if ( property.isAnnotationPresent( EmbeddedId.class ) ) {
+		if ( property.hasAnnotationUsage( EmbeddedId.class ) ) {
 			// we don't allow custom instantiators for composite ids
 			return null;
 		}
 
-		final org.hibernate.annotations.EmbeddableInstantiator propertyAnnotation =
-				property.getAnnotation( org.hibernate.annotations.EmbeddableInstantiator.class );
+		final AnnotationUsage<org.hibernate.annotations.EmbeddableInstantiator> propertyAnnotation =
+				property.getAnnotationUsage( org.hibernate.annotations.EmbeddableInstantiator.class );
 		if ( propertyAnnotation != null ) {
-			return propertyAnnotation.value();
+			return propertyAnnotation.getClassDetails( "value" ).toJavaClass();
 		}
 
-		final org.hibernate.annotations.EmbeddableInstantiator classAnnotation =
-				returnedClass.getAnnotation( org.hibernate.annotations.EmbeddableInstantiator.class );
+		final AnnotationUsage<org.hibernate.annotations.EmbeddableInstantiator> classAnnotation =
+				returnedClass.getAnnotationUsage( org.hibernate.annotations.EmbeddableInstantiator.class );
 		if ( classAnnotation != null ) {
-			return classAnnotation.value();
+			return classAnnotation.getClassDetails( "value" ).toJavaClass();
 		}
 
-		final Class<?> embeddableClass = context.getBootstrapContext().getReflectionManager().toClass( returnedClass );
-		if ( embeddableClass != null ) {
-			return context.getMetadataCollector().findRegisteredEmbeddableInstantiator( embeddableClass );
+		if ( returnedClass.getClassName() != null ) {
+			return context.getMetadataCollector().findRegisteredEmbeddableInstantiator( returnedClass.toJavaClass() );
 		}
 
 		return null;
